@startuml

' Define the entities
entity "Users" as users {
  + user_id : int
  -- 
  firstname : varchar(30)
  lastname : varchar(30)
  age : int
  height : int
  weight : int
  gender : varchar(30)
  activityLevel : varchar(50)
  goal : varchar(30)
  email : varchar(50)
  phone : int
  password_hash : varchar(255)
  created_at : datetime
}

entity "Recipes" as recipes {
  + recipe_id : int
  --
  name : varchar(255)
  cook_name : varchar(100)
  average_time : int
  created_at : datetime
  instructions : text
  meal_type : varchar(100)
}

entity "Ingredients" as ingredients {
  + ingredient_id : int
  --
  name : varchar(255)
  description : text
  calories : int
  carbohydrate : int
  fat : int
  protein : int
}

entity "Recipe Ingredients" as recipe_ingredients {
  + recipe_id : int
  + ingredient_id : int
  --
  quantity : varchar(255)
}

entity "Subscriptions" as subscriptions {
  + subscription_id : int
  --
  user_id : int
  start_date : datetime
  end_date : datetime
  status : enum('aktiv','inaktiv')
}

entity "Profile Pictures" as profilepictures {
  + picture_id : int
  --
  user_id : int
  status : int
}

' Define relationships
recipes ||--o{ recipe_ingredients : "uses"
ingredients ||--o{ recipe_ingredients : "included in"
users ||--o{ recipes : "creates" "optional [0..*]"
users ||--o{ subscriptions : "has"
users ||--o{ profilepictures : "uploads"

@enduml
